# fzero

./: README.md  pyproject.toml
src/fzero/: __main__.py  main.py  sram.py  util.py
